# sentinel-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
.specify/memory/: constitution.md
.specify/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
assets/blocklists/: default-domains.txt
docs/npm/: README.md  README_SOURCE.md
packaging/homebrew/: sentinel.rb.tpl
packaging/npm/: .npmignore  README.md  package.json
scripts/: install-sentinel.sh
scripts/release/: authorize_release.sh  build_release_artifacts.sh  common.sh  inspect_release_state.sh  publish_github_release.sh  publish_homebrew.sh  publish_npm.sh  resolve_version.sh  summarize_release.sh  update_versions.sh
specs/001-system-ad-blocker/: spec.md
specs/002-build-cli-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-interactive-cli-installer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-menu-cli-network-safety/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-menu-cli-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-gate-release-publishing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-settings-release-alignment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  main.rs
src/blocking/: blocklist.rs  mod.rs  resolver.rs  runtime.rs
tests/: contract.rs  integration.rs  snapshot.rs
(+80 files in other folders)
