[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"
description = "System-level CLI ad blocker with safe recovery workflows"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
comfy-table = "7.1"
crossterm = "0.28"
directories = "5.0"
hickory-proto = "0.24"
miette = { version = "7.4", features = ["fancy"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
